# actions-test

./: .actrc  .gitignore  Cargo.toml  README.md  deny.toml  flake.nix  rust-toolchain.toml  taplo.toml
.github/workflows/: open_pr.yml
nix/: check-fmt.nix  check-sorted.nix  check-statix.nix  module.nix
src/: main.rs
